# dinov2_inference

./: pyproject.toml  requirements.txt
dinov2/models/: vision_transformer.py
src/dinov2/: __init__.py
src/dinov2/hub/depth/: decode_heads.py
src/dinov2/layers/: block.py
src/dinov2/models/: vision_transformer.py
