[project]
name = "dinov2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tomomasa SHIBAWAKI", email = "shibawaki@digic.org" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "torch>=2.12.0",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
